[project]
name = "tumu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "feedparser>=6.0.11",
]


[tool.hatch.build.targets.wheel]
packages = ["src/tumu"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # feedparserの警告を無視
    "ignore::DeprecationWarning:feedparser.*",
]