[project]
name = "tumu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "feedparser>=6.0.11",
    "pandas-datareader>=0.10.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "xlrd>=2.0.2",
    "yfinance>=0.2.65",
]


[tool.hatch.build.targets.wheel]
packages = ["src/tumu"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # feedparserの警告を無視
    "ignore::DeprecationWarning:feedparser.*",
]
