[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tumu"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "pandas-datareader>=0.10.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "setuptools>=80.9.0",
    "xlrd>=2.0.2",
    "yfinance>=0.2.65",
]


[tool.hatch.build.targets.wheel]
packages = ["src/tumu"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # feedparserの警告を無視
    "ignore::DeprecationWarning:feedparser.*",
    # pandas_datareaderの警告を無視
    "ignore::DeprecationWarning:pandas_datareader.*",
]
